--- a/index.html
+++ b/index.html
@@ -16,8 +16,26 @@
     </head>
     <body background="background1.jpg">
      <h1>AI PING-PONG
-    <button id="btn1" data-target="#mymodel">  ~Instructions~  </button>
+    <button id="btn1" data-toggle="modal" data-target="#mymodel">  ~Instructions~  </button>
      </h1>
+     <button class="btn btn-success" onclick="startgame()">CLICK HERE</button>
+     <button id="status"class="btn btn-warning"></button>
+     <div id="canvas"></div>
+     <div id=" gameconsole"></div>
+     <div id="mymodel" class=" modal fade"><div class=" modal-dialog">
+        <div class="modal-content" ><div class="modal-header"><button class="close" data-dismiss="modal">&times;</button>
+          <h4>Instructions</h4>
+        </div> 
+        <div class="modal-body">
+            <ol>
+                <li>Click on playbutton</li>
+                <li>Move your nose</li>
+                <li>Reload the page to restart the game</li>
+              </ol>
+        </div>
+        </div>
+      </div></div>
         <script src="main.js"></script>
+    
     </body>
 </html>
